# jah

./: .gitignore  README.md  add-dots-and-push.sh  add-dots.sh  gitignore  pyproject.toml  zensical.toml
.github/*/: publish-to-pypi.yml
.github/workflows/: publish-to-pypi.yml
.ipynb_checkpoints/: README-checkpoint.md  add-dots-and-push-checkpoint.sh  pyproject-checkpoint.toml
docs/: faq.md  index.md
overrides/: main.html
site/: 404.html  index.html  search.json  sitemap.xml
site/faq/: index.html
src/jah/: __init__.py
src/jah/.ipynb_checkpoints/: __init__-checkpoint.py
