[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "jah"
version = "1.0.3"
authors = [
  { name="Jeff Jacobs", email="jj1088@georgetown.edu" },
]
description = "Autohinter for data science assignments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytz",
  "IPython",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jpowerj/jah"
Issues = "https://github.com/jpowerj/jah/issues"